    
 MSG:
  * Allow to control the simulation from a trace file.
    New functions MSG_action_register() and MSG_action_trace_run()
    The first one allows to associate a function execution to each
     kind of action while the second one parses a trace file and
     triggers the corresponding actions within the system.
    For now, only a toy example is provided in examples/msg/actions
    
 SIMIX:
  * Add SIMIX_process_set_name() to change the name of the current
    process in the log messages.

 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr> 

SimGrid (3.3) stable; urgency=high

 OVERALL CHANGES:

  * JAVA BINDINGS for MSG (you dreamt of them? We made them)
    [Malek Cherier & Mt]

  * Introduce the SIMIX module: factorize code between MSG and GRAS.
    [Bruno Donassolo]
  
    Until now, GRAS were using MSG as an interface to SURF. It was
    quite difficult because both interface have several differences
    (MSG channels vs GRAS sockets were the most notable point).
   
    This also opens the gate to SMPI (which should occur soon) and speed
    up simulations by to 40% (even if it were not the main goal).
  
    ************************************** 
    *DO NOT MIX 3.2 RESULTS WITH 3.3 ONES* Simix may changes simulations!
    **************************************
    The point is that events occuring at the exact same timestamp are
    not scheduled in the same order with the old and new version. This
    may be enough to completely change the execution of simulations in
    some cases. Sorry for the inconvenience.

  * Cleanup and upgrade the XML format to push further scalability
    issues (check http://hal.inria.fr/inria-00256883/ for more info)

  * Improve the testing infrastructure with tesh. Now a very large part of
    the code is tested not only by being run but also by checking that the
    output match an expected output [Mt].

  * Move on to FleXML v1.7 for the embeeded XML parsers. This version