@@ -1,0 +1,5 @@
+<?xml version='1.0'?>
+<!DOCTYPE platform SYSTEM "simgrid.dtd">
+<platform version="2">
+  <process host="Jacquelin" function="emigrant"/>
+</platform>
